--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "vue-axios": "^2.1.4",
+        "vue-loading-overlay": "^3.2.0",
         "vue-router": "^3.0.2",
         "vuejs-dialog": "^1.3.0",
         "vuetify": "^1.5.4"
